--- a/src/components/TextAnimation/TextAnimation.module.css
+++ b/src/components/TextAnimation/TextAnimation.module.css
@@ -1,7 +1,7 @@
 .textContainer {
   display: inline-block;
-  overflow: hidden;
   text-decoration: none;
+  vertical-align: middle;
 }
 
 .letter {
